--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,14 +1,10 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
 name: Java CI with Maven
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+  schedule:
+    - cron: "*/10 * * * *"
+    
 jobs:
   build:
 
@@ -26,4 +22,12 @@ jobs:
       run: java -jar target/DataUpdater_exec.jar
     - name: Show run results
       run: ls -la dist/data
+    - name: FTP-Deploy-Action
+      uses: SamKirkland/FTP-Deploy-Action@2.0.0
+      env:
+        FTP_SERVER: ftpupload.net
+        FTP_USERNAME: epiz_25412810
+        FTP_PASSWORD: ${{ geokei_ftp_add_data }}
+        LOCAL_DIR: dist
+        REMOTE_DIR: geokei.com/htdocs
       
