--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 	<packaging>jar</packaging>
 	<name>DataUpdater</name>
 	<properties>
-	<maven.compiler.source>1.9</maven.compiler.source>
-    <maven.compiler.target>1.9</maven.compiler.target>
+		<maven.compiler.source>1.9</maven.compiler.source>
+		<maven.compiler.target>1.9</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -18,6 +18,13 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.28</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.200</version>
 		</dependency>
 
 		<dependency>
@@ -32,7 +39,7 @@
 			<version>2.10.0.pr2</version>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -45,7 +52,7 @@
 							<goal>single</goal>
 						</goals>
 						<configuration>
-						  <finalName>DataUpdater_exec</finalName>
+							<finalName>DataUpdater_exec</finalName>
 							<archive>
 								<manifest>
 									<mainClass>DataUpdater</mainClass>
