--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.28</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -38,6 +38,20 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.10.0.pr2</version>
 		</dependency>
+
+		<dependency>
+			<!-- jsoup HTML parser library @ https://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.13.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>28.0-jre</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
